First implementation of key mechanisme

--- a/web01/package.json
+++ b/web01/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.4.7",
+    "@types/youtube": "0.0.44",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
